Fix GridTrackSize::operator== https://bugs.webkit.org/show_bug.cgi?id=112501

Reviewed by Eric Seidel.

Source/WebCore:

There was a missing "other." in the function.

This was found by experimenting with a potential new Clang warning.

Test: fast/css-grid-layout/grid-dynamic-updates-relayout.html

* rendering/style/GridTrackSize.h:
(WebCore::GridTrackSize::operator==):

LayoutTests:

Add a test to check that style changes cause relayout correctly.

* fast/css-grid-layout/grid-dynamic-updates-relayout-expected.txt: Added.
* fast/css-grid-layout/grid-dynamic-updates-relayout.html: Added.


Canonical link: https://commits.webkit.org/130922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146117 268f45cc-cd09-0410-ab3c-d52691b4dbfc